--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.3",
+    "angular-oauth2-oidc": "^17.0.2",
     "express": "^4.18.2",
+    "google-auth-library": "^9.11.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
