--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^2.3.0",
     "@angular/animations": "^17.1.0",
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
@@ -21,9 +22,12 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.3",
+    "@clerk/clerk-js": "^5.7.1",
     "angular-oauth2-oidc": "^17.0.2",
+    "angularx-social-login": "^4.1.0",
     "express": "^4.18.2",
     "google-auth-library": "^9.11.0",
+    "keycloak-js": "^25.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
